--- a/lexmark.html
+++ b/lexmark.html
@@ -91,18 +91,18 @@
         <div class="col-sm-4">
           <h4>Understand</h4>
           <li>Meet with Stakeholder</li>
-          <li>Interview Key Players</li>
           <li>Meet with Developer</li>
+          <li>Meet with Key Player in the Process</li>
           <li>Gather Existing Data</li>
-          <li>Baseline User Testing</li>
+          <li>Baseline User Testing/Interview</li>
           <li>Analyze Pain Points</li>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6">
           <h4>Explore</h4>
           <li>Card Sorting</li>
           <li>Develop Design Concept</li>
           <li>Design Review & Revise Concept#1</li>
-          <li>Meet with Stakehodler & Developer</li>
+          <li>Meet with Stakeholder & Developer</li>
           <li>Design Review & Revise Concept #2</li>
         </div>
         <div class="col-sm-4">
@@ -129,25 +129,30 @@
 
   <div class="padding">
     <div class="container">
+
       <div class="col">
         <h3 class="text-center">Solutions at Glance</h3>
       </div>
+      <div class="col">
+        <p>Between the old and new design, there was a 36% overall increase in 10 common tasks success rate. Initial success rate being 53% and final success rate being 89%.</p>
+      </div>
       <div class="row">
-      <div class="col-sm-4">
-        <h5>01</h5>
+      <div class="col-sm-6">
+        <h5>01 Improve the Info Architecture</h5>
         <hr>
-        <p>Solution 1</p>
+        <h4>Example of Behavior Change</h4>
+        <p></p>
+        <img src="images/overview.png" class="img-responsive">
+
       </div>
-      <div class="col-sm-4">
-        <h5>02</h5>
+      <div class="col-sm-6">
+        <h5>02 Redesign the Forms</h5>
         <hr>
-        <p>Solution 2</p>
+        <h4>Example of Interaction Change </h4>
+        <img src="images/formoverview.png" class="img-responsive">
+
       </div>
-      <div class="col-sm-4">
-        <h5>03</h5>
-        <hr>
-        <p>Solution 3</p>
-      </div>
+
     </div>
   </div>
   </div>
@@ -159,19 +164,65 @@
       <div class="row">
         <h2>Understand</h2>
       </div>
-        <div class="container">
-          <div class="row">
-            <h3 class="text-center">Interaction Map</h3>
+          <div class="row text-center">
+            <h3>Meet With Stakeholder, Developer, & Key Player</h3>
           </div>
-          <div class="row">
             <div class="col">
-                <img src="images/interactionmap.png" class="img-responsive">
-            </div>
+              <h4>Stakeholder: Manager of Facilities and Site Operations</h4>
+              <li>Wants to eliminate time spent by his team redirecting requests to proper channels.</li>
+              <h4>Developer: Person responsible for handling requests from the Facilities and Site Operations section of ServiceNow</h4>
+              <li>Gave me examples how other industries use ServiceNow</li>
+              <li>Fiew technical limitations</li>
+                <h4>Key Player: Person responsible for handling requests from the Facilities and Site Operations section of ServiceNow</h4>
+              <li>Gave me insight on what information were necessary on forms</li>
+              <li>Gave me the rundown of the processes</li>
+          <br>  </div>
           </div>
-      </div>
-      </div>
+        </div>
+
+        <div class="padding">
+          <div class="container">
+                <div class="row text-center">
+                  <h3>Gather existing data</h3>
+                </div>
+                  <div class="col">
+                    <p>Unfortuntely, there was not much data available. I was interested in finding out which requests were confused most frequently, which requests were the most popular, conversion rates, etc but specific information on each requests were not available. However, here are some general information they were able to give me from their system.
+                    <li>4177 service requests in the past 12 months</li>
+                    <li>Majority of requests "seemed" to be maintenance requests</li></p>
+
+                <br>  </div>
+                </div>
+              </div>
+
+              <div class="padding">
+                <div class="container">
+                      <div class="row text-center">
+                        <h3>Usability Testing</h3>
+                      </div>
+                        <div class="col">
+
+                        <p>Because there was not a lot of data, I wanted to gather my own before embarking on prototyping redesigns. Although I would have liked to learn more about specific quantitative data such as conversion rates, bounce rates, and times being spent on individual forms to get a more accurate view of the situation, I came to a conclusion that I only had 12 weeks at Lexmark and while this was my primary project, it would not be my only one. With the limited time available, I decided to collect success rates on 10 most common tasks. I phrased these ten tasks as real life cases instead of telling them what request form to submit because that was a major confusion in the process.</p>
+
+                          <ol>1. After work-hours, items from people’s cubicles are disappearing. The group decides to install security cameras. Please submit a request.																									</ol>
+                          <ol>2. You have lower back pain that prevents you from sitting for more than 15 minutes straight. Please submit a request for a stand-up desk.		</ol>
+
+                          <ol>3. You are a manager who wants to break the wall between two small meeting rooms and make it into one medium sized meeting room. Please submit a request.		</ol>
+                <ol>4. A projector is broken. Please submit a request.			</ol>
+
+  <ol>5. You need to ship a 1000 lb. equipment to China. Please submit a request.				</ol>
 
 
+                  <ol>6. You recently got injured and will need to use a wheelchair for several months. The entry to your office does not have a automotive door, please submit a request.					</ol>
+
+                        <ol>7. In your office, there is a 15ft x 5ft sized whiteboard hung up. It needs to be relocated into a different room. Please submit a request.																									</ol>
+                          <ol>8. You want to move a couch out of your office. Please submit a request.																									</ol>
+                          <ol>9. A cabinet has been in your office for the last ten years. You want to get it opened, but it is locked. Please submit a request																									</ol>
+
+                          <ol>10. You have highly sensitive documents and you need a padlock for your door. Please submit a request.		</ol>
+
+                            </div>
+                      </div>
+                    </div>
 
       <div class="padding">
         <div class="container">
