at Lexmark explore

--- a/lexmark.html
+++ b/lexmark.html
@@ -97,7 +97,7 @@
           <li>Baseline User Testing/Interview</li>
           <li>Analyze Pain Points</li>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-4">
           <h4>Explore</h4>
           <li>Card Sorting</li>
           <li>Develop Design Concept</li>
@@ -169,10 +169,10 @@
           </div>
             <div class="col">
               <h4>Stakeholder: Manager of Facilities and Site Operations</h4>
-              <li>Wants to eliminate time spent by his team redirecting requests to proper channels.</li>
+              <li>Wants to eliminate time spent by his team redirecting requests to proper channels.</li><br>
               <h4>Developer: Person responsible for handling requests from the Facilities and Site Operations section of ServiceNow</h4>
               <li>Gave me examples how other industries use ServiceNow</li>
-              <li>Fiew technical limitations</li>
+              <li>Fiew technical limitations</li><br>
                 <h4>Key Player: Person responsible for handling requests from the Facilities and Site Operations section of ServiceNow</h4>
               <li>Gave me insight on what information were necessary on forms</li>
               <li>Gave me the rundown of the processes</li>
@@ -221,29 +221,35 @@
                           <ol>10. You have highly sensitive documents and you need a padlock for your door. Please submit a request.		</ol>
 
                             </div>
+                            <br>
+                      <div class="col">
+                        <h4>Here were the results of the old design</h4>
+                          <p>Collecting the baseline data, not allowed me to see a clearer picture of the old design, but it also allowed me to have a standard of comparison for the success rate average of the new design later on in the study.</p>
+                        <img src="images/baselinedata.png" class="img-responsive">
+
+
+
                       </div>
                     </div>
+                  </div>
 
-      <div class="padding">
-        <div class="container">
-          <div class="col">
-            <h3 class="text-center">Personas</h3>
-          </div>
-          <div class="row">
-            <div class="col-sm-6">
-                <h5>Persona 1</h5>
-                <hr>
-                <p>Img</p>
-            </div>
-            <div class="col-sm-6">
-              <h5>Persona 2</h5>
-              <hr>
-              <p>Img</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
+                  <div class="padding">
+                    <div class="container">
+
+                          <div class="row text-center">
+                            <h3>Gather Pain Points</h3>
+                          </div>
+                            <div class="col">
+                              <p>At the end of each testing, I was able to do card sorts and ask questions about specific forms and figure out their main frustrations. The card sorts helped me see common groupings of different requests. With the quantitative data, I was able to see the most urgent confusions but the qualitative data supported by design decisions. </p>
+                              <h4>Example pain points</h4>
+                              <li>When requesting a security camera,"Site Operations Security Request" seems like a great option, until you click on the form and realize it's only for location in Zhuhai, China. Come up with a design that prioritizes location first to cut out any unnecessary searhcing behaviors.</li>
+                              <li>For an ergonomic furniture request, there is a list of options to select however, not everyone knows what each option means and options that are either/or are checkboxes which allow for multiple selections. Make the information digestible, offer categories, use radio buttons rather than checkboxes, and offer help where needed with help icons.</li>
+                              <li>For the overall request selection process, the titles for each request were not clear or sometimes representative of the request forms. Come up with a design that has helper text for each request form.</li>
+                            </div>
+                          </div>
+                        </div>
+
 
         <div class="padding">
           <div class="container">
