half way done lexmrk

--- a/lexmark.html
+++ b/lexmark.html
@@ -257,72 +257,44 @@
               <h2>Explore</h2>
             </div>
             <div class="col">
-              <h3 class="text-center">Competitive Analysis</h3>
+              <h3 class="text-center">Developing First Design Concept</h3>
             </div>
             <div class="row">
-              <div class="col-sm-3">
-                <h5>01 Direct</h5>
-                <hr>
-                <p>Explain</p>
+              <div class="col">
+                <h4>Side by side comparison of old and new flow.</h4>
+
+
+                <img src="images/firstflow.png" class="img-responsive">
               </div>
-              <div class="col-sm-3">
-                <h5>02 Indirect</h5>
-                <hr>
-                <p>Explain</p>
               </div>
-              <div class="col-sm-3">
-                <h5>03 Partial</h5>
-                <hr>
-                <p>Explain</p>
-              </div>
-              <div class="col-sm-3">
-                <h5>04 Parallel</h5>
-                <hr>
-                <p>Explain</p>
-              </div>
-            </div>
+
           </div>
           </div>
 
           <div class="padding">
             <div class="container">
               <div class="col">
-                <h3 class="text-center">Surveys</h3>
+                <h3 class="text-center">Design review & Revisions #1</h3>
               </div>
               <div class="col">
-                <h5>01 Direct</h5>
-                <p>Explain</p>
+                <p>After my first design concept, it was time for good old design review! Design reviews were one of my favorite moments at Lexmark. Although nerve-wrecking, the reaction from my team was positive! However, they did give me advice that was crucial: forms do not always have to display all the information at first load. This got me thinking about how I can incorporate interactions that were dynamic to clean up the forms. Up until this point, I was using XD to do the mockups but decided to move to Axure for prototyping because of its capabilities for including dynamic interactions.</p>
+                <img src="images/appearonselect.png" class="img-responsive">
+
               </div>
             </div>
           </div>
 
           <div class="padding">
             <div class="container">
-              <div class="row">
-                <h2>Identify</h2>
+              <div class="col">
+                <h3 class="text-center">Meeting(Stake Holder, Developer) & Revisions #2</h3>
               </div>
-                <div class="col">
-                  <h3 class="text-center">Heuristics Evaluation</h3>
-                </div>
-                <div class="col">
-                  <h5>01 Direct</h5>
-                  <p>Explain</p>
-                </div>
+              <div class="col">
+                <p>Showing initial prototypes on Axure made it really easy for the stakeholder to see how effective my changes would be. He was really happy about the progress! However, the developer informed me that although my three column design looked great, developers will only be able to code a two column design. A technical limitation that I did not know about was brought to light. After converting the forms to two columns from three, I was ready for testing!</p>
+                <img src="images/furnituremove.png" class="img-responsive">
               </div>
             </div>
-
-            <div class="padding">
-              <div class="container">
-                  <div class="col">
-                    <h3 class="text-center">Usability Testing</h3>
-                  </div>
-                  <div class="col">
-                    <h5>01 Direct</h5>
-
-                      <p>Explain</p>
-                  </div>
-              </div>
-            </div>
+          </div>
 
             <div class="padding">
               <div class="container">
@@ -330,11 +302,12 @@
                   <h2>Materialize</h2>
                 </div>
                 <div class="col">
-                  <h3 class="text-center">Preference Testing</h3>
+                  <h3 class="text-center">Data Collection for New Design</h3>
                 </div>
                 <div class="col">
-                  <h5>01 Direct</h5>
-                  <p>Explain</p>
+                  <h4>User testing of new design showed a 36% improvement!</h4>
+                  <img src="images/furnituremove.png" class="img-responsive">
+
                 </div>
               </div>
             </div>
