--- a/lexmark.html
+++ b/lexmark.html
@@ -287,11 +287,24 @@
           <div class="padding">
             <div class="container">
               <div class="col">
-                <h3 class="text-center">Meeting(Stake Holder, Developer) & Revisions #2</h3>
+                <h3 class="text-center">Meeting(Stake Holder, Developer)</h3>
               </div>
               <div class="col">
-                <p>Showing initial prototypes on Axure made it really easy for the stakeholder to see how effective my changes would be. He was really happy about the progress! However, the developer informed me that although my three column design looked great, developers will only be able to code a two column design. A technical limitation that I did not know about was brought to light. After converting the forms to two columns from three, I was ready for testing!</p>
+                <p>Showing initial prototypes on Axure made it really easy for the stakeholder to see how effective my changes would be. He was really happy about the progress! However, the developer informed me that although my three column design looked great, developers will only be able to code a two column design. A technical limitation that I did not know about was brought to light. After converting the forms to two columns from three, I was ready for another round of design review!</p>
                 <img src="images/furnituremove.png" class="img-responsive">
+              </div>
+            </div>
+          </div>
+
+          <div class="padding">
+            <div class="container">
+              <div class="col">
+                <h3 class="text-center">Design review & Revisions #1</h3>
+              </div>
+              <div class="col">
+                <p>For this second design review, we did a final walk through of the concept that has been revised twice since the last design review and devoted time working on strings! We learned from users that they value clarity and simplicity. With the other UX designers' advice, I decided that helper text/descriptions should be a list of services or items that can be submitted for each request form. </p>
+                <img src="images/lexington.png" class="img-responsive">
+
               </div>
             </div>
           </div>
@@ -306,7 +319,10 @@
                 </div>
                 <div class="col">
                   <h4>User testing of new design showed a 36% improvement!</h4>
-                  <img src="images/furnituremove.png" class="img-responsive">
+                  <img src="images/newdata.png" class="img-responsive">
+
+                  <h4>User testing of new design showed a 36% improvement!</h4>
+                  <p>However, there were areas of concern. Goal #9 had a lower success rate this time around when compared to the old design. I made my last round of revisions to 
 
                 </div>
               </div>
