done with lexmark

--- a/lexmark.html
+++ b/lexmark.html
@@ -287,11 +287,14 @@
           <div class="padding">
             <div class="container">
               <div class="col">
-                <h3 class="text-center">Meeting(Stake Holder, Developer)</h3>
+                <h3 class="text-center">Stakeholder & Developer Approval</h3>
               </div>
-              <div class="col">
+              <div class="col-sm-6">
                 <p>Showing initial prototypes on Axure made it really easy for the stakeholder to see how effective my changes would be. He was really happy about the progress! However, the developer informed me that although my three column design looked great, developers will only be able to code a two column design. A technical limitation that I did not know about was brought to light. After converting the forms to two columns from three, I was ready for another round of design review!</p>
-                <img src="images/furnituremove.png" class="img-responsive">
+              </div>
+                <div class="col-sm-6">
+                  <img src="images/furnituremove.png" class="img-responsive">
+                </div>
               </div>
             </div>
           </div>
@@ -321,8 +324,8 @@
                   <h4>User testing of new design showed a 36% improvement!</h4>
                   <img src="images/newdata.png" class="img-responsive">
 
-                  <h4>User testing of new design showed a 36% improvement!</h4>
-                  <p>However, there were areas of concern. Goal #9 had a lower success rate this time around when compared to the old design. I made my last round of revisions to 
+                  <h4>Concern</h4>
+                  <p>However, there were an area of concern. Goal #9 had a lower success rate this time around when compared to the old design. When people who failed the task were asked about their confusion, they stated that the wrongfully submitted form never indicated to them that they were in the wrong location. I made sure to incorporate that feedback in the last round of revisions before developer hand-off.</p>
 
                 </div>
               </div>
@@ -331,12 +334,19 @@
             <div class="padding">
               <div class="container">
                   <div class="col">
-                    <h3 class="text-center">Recommendations</h3>
+                    <h3 class="text-center">Takeaways</h3>
                   </div>
                   <div class="col">
-                    <h5>01 Direct</h5>
-
-                      <p>Explain</p>
+                    <h4>
+                  <li>When designing a product,experience should come first. Otherwise, be prepared for more time and cost being spent on the project down the road.</li>
+                  <li>To help users understand where they are and locate what they are searching for, be contextual,transparent, and approachable.</li>
+                  <li>Always keep in mind that you are
+                  designing for people. People prefer simplicity and clarity. Sometimes something simple as a list rather than a description can be clearer.</li>
+                  <li>Always keep in mind that you are designing for people. People prefer simplicity and clarity.</li>
+                  <li>Communicate frequently with developers about the specifics.</li>
+                  <li>When users are involved in the design process either throug testing or other research methods, results are better.</li>
+                  <li> Always iterate!</li>
+                </h4>
                   </div>
               </div>
             </div>
