--- a/cnbc.html
+++ b/cnbc.html
@@ -43,6 +43,7 @@
 <ul class="nav navbar-nav navbar-right">
   <li><a class="active" href="work.html">WORK</a></li>
   <li><a class="about" href="about.html">ABOUT</a></li>
+  <li><a class="about" href="about.html">RESUME</a></li>
 </ul>
 </div>
 
@@ -102,7 +103,7 @@
       </div>
       <div class="row">
         <div class="col-sm-3">
-          
+
           <li>Interaction Map</li>
           <li>Personas</li>
           <li>Scenarios</li>
