--- a/lexmark.html
+++ b/lexmark.html
@@ -43,6 +43,7 @@
 <ul class="nav navbar-nav navbar-right">
   <li><a class="active" href="work.html">WORK</a></li>
   <li><a class="about" href="about.html">ABOUT</a></li>
+    <li><a class="about" href="about.html">RESUME</a></li>
 </ul>
 </div>
 
@@ -337,7 +338,7 @@
                     <h3 class="text-center">Takeaways</h3>
                   </div>
                   <div class="col">
-                    <h4>
+
                   <li>When designing a product,experience should come first. Otherwise, be prepared for more time and cost being spent on the project down the road.</li>
                   <li>To help users understand where they are and locate what they are searching for, be contextual,transparent, and approachable.</li>
                   <li>Always keep in mind that you are
@@ -346,7 +347,7 @@
                   <li>Communicate frequently with developers about the specifics.</li>
                   <li>When users are involved in the design process either throug testing or other research methods, results are better.</li>
                   <li> Always iterate!</li>
-                </h4>
+
                   </div>
               </div>
             </div>
