--- a/ginternchallenge.html
+++ b/ginternchallenge.html
@@ -43,6 +43,8 @@
 <ul class="nav navbar-nav navbar-right">
   <li><a class="active" href="work.html">WORK</a></li>
   <li><a class="about" href="about.html">ABOUT</a></li>
+  <li><a class="about" target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf">RESUME</a></li>
+
 </ul>
 </div>
 
