--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
   </button>
-<a class="navbar-brand" href="documents/michellekim.pdf"><img src="images/logo.png">
+<a class="navbar-brand" href="index.html"><img src="images/logo.png">
 </a>
 </div>
 <div class="collapse navbar-collapse" id="navbar-collapse-main">
 <ul class="nav navbar-nav navbar-right">
   <li><a class="active" href="work.html">WORK</a></li>
   <li><a class="about" href="about.html">ABOUT</a></li>
-  <li><a class="about" href="about.html">RESUME</a></li>
+  <li><a class="about" target="_blank" href="https://kminjin.github.io/documents/michellekim.pdf">RESUME</a></li>
+
 </ul>
 </div>
 
