about me kind of do done

--- a/about.html
+++ b/about.html
@@ -53,52 +53,75 @@
 </nav>
 
 
+<div id="padding"></div>
 
-<div id="home">
-  <div class="landing-text">
-    <!-- <h1>BOOTSTRAP</h1> -->
-    <h3><span>Hello, stay a while & explore my work</span></h3>
-
-    <i class="fas fa-chevron-down arrowsize"></i>
-
-  </div>
-</div>
-
-
-<div class="padding">
-  <div class="container"
-    <div class="row">
-      <div class="col">
-      <h2>Selected Projects</h2>
-      </div>
-      <a href= "lexmark.html" class="col">
-        <img src="images/lexmark.png" style="width:100%" class= "animation" alt= "Vegout">
-      </a>
-      <a href= "cnbc.html" class="col">
-        <img src="images/cnbc.png" style="width:100%" class= "animation" alt= "Vegout">
-      </a>
-      <a href= "ginternchallenge.html" class="col">
-        <img src="images/google.png" style="width:100%" class= "animation" alt= "Vegout">
-      </a>
-  </div>
-  </div>
-</div>
 
 <div class="padding">
   <div class="container">
-    <div class="col">
-      <h2>View More</h2>
+    <div class="row">
+      <div class="col">
+      <h3>Hello, it's nice to meet you.</h3>
+      </div>
+    </div>
+    <div class= "row">
+      <div class="col-sm-4">
+        <p>Before studying HCI, I was a pre-med student pursuing psychiatry. To gain healthcare experience, I found a part time job as an ER medical scribe but little did I know... it would lead to an 145<span>&#176;</span> turn in my career.<br><br>
+          I was frustrated with how electronic health records which had huge impacts on patient care were not designed for them but rather designed for insurance companies to make billing easier. With Google's help, I discovered the field UX and never looked back since! <br><br>
+          While my career goals have changed, my purpose has remained the same: improve the lives of others. My greatest strength as a designer is that I genuinely care about the people I serve and the users are my highest priority. Check out my talk on digital well-being at the Drupal Conference in Chicago <a href="https://www.youtube.com/watch?v=9R2mkMYUaCo" target="_blank">here</a>.
+</p>
+
+
+      </div>
+      <div class="col-sm-8">
+        <img src="images/aboutmegradphoto.png" style="width:100%" class= "animation" alt= "Vegout">
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+
+<div class="padding">
+  <div class="container">
+    <div class="row">
+
+      <h2>Hobbies</h2>
     </div>
     <div class="row">
-      <a href= "cnbc.html" class="col-sm-4">
-        <img src="images/comerica.png" class="img-responsive">
-      </a>
-    <a href= "vegout.html" class="col-sm-4">
-      <img src="images/vegout.png" class="img-responsive">
-    </a>
-    <a href= "michiganmedicine.html" class="col-sm-4">
-      <img src="images/michiganmed.png" class="img-responsive">
-    </a>
+      <div class="col-sm-4 ">
+        <img src="images/hobbygolf.png" class="img-responsive">
+        <h4 class= "text-center">Terrible, but I have fun!</h4>
+      </div>
+  <div class="col-sm-4">
+      <img src="images/hobbyadventure.png" class="img-responsive">
+      <h4 class= "text-center">Walking around aimlessly.</h4>
+    </div>
+  <div class="col-sm-4">
+      <img src="images/hobbyreading.jpeg" class="img-responsive">
+<h4 class= "text-center">...Not a candid picture...</h4>
+</div>
+</div>
+</div>
+</div>
+
+
+<div class="padding">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+      <h3>Let's Connect</h3>
+      </div>
+    </div>
+    <div class= "row">
+      <div class="col">
+        <p>There is so much more to me that I can't convey in 150 words and four images. In Ann Arbor? Let's go grab bubble tea at the new place on State st. called Coco. If not, email me at minjin@umich.edu. Genuinely looking forward to meeting you in person.
+</p>
+
+
+
+    </div>
+  </div>
+</div>
 
     <!-- <div id="fixed"> -->
 
